# flaggr

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  flaggr  main.c  run.sh
include/: SDL.h  flags.h
src/: SDL.c  main.c
src/libs/: flags.c
tests/: test  test.c
